# professional-python

./: .gitignore  02-Implementation.ipynb  03-Testing.ipynb  Markov_chain.ipynb  README.md  reqsmall.txt
.ipynb_checkpoints/: 03-Testing-checkpoint.ipynb
markov-chain/: Markov_chain.ipynb  pyproject.toml
markov-chain/src/markov_chain/: small_language_model.py
markov-chain/tests/: test_small_language_model.py
markov_chain/: pyproject.toml
markov_chain/src/markov_chain/: markov_chain.py
myapp/: example.py  pyproject.toml
mylib/: pyproject.toml
mypkgapp/: pyproject.toml
mypkgapp/src/mypkgapp/: __init__.py
pandastest/: hello.py  pyproject.toml
sk-stepwise/: .coverage  .pre-commit-config.yaml  pyproject.toml
sk-stepwise/.pyre/: pyre.stderr
sk-stepwise/src/sk_stepwise/: 02-Implementation.ipynb  __init__.py  sw.py
sk-stepwise/tests/: test_basic.py
