[project]
name = "sk-stepwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hyperopt>=0.2.7",
    "numpy>=2.1.1",
    "pandas>=0.2",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pre-commit>=4.0.1",
    "pyre-check>=0.9.22",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.pytest.ini_options]
minvesrion = "6.0.0"
addopts = ["-v"]
testpaths = ["tests"]
markers = [
    "slow: mark test as slow to run",
    "skip: mark test as skipped",
    "fast: mark test as fast to run",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = 'tests.*'
ignore_errors = true

[tool.ruff]
line-length = 60

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
